# vEB-Port-Allocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  small_business_guide.md  usage.md
include/: client.h  port_manager.h  veb.h
scripts/: install.sh  portd.service  sample_config.json
src/cli/: portcli.c
src/client/: client.c
src/manager/: main.c  pool.c  protocol.h  server.c  server.h
src/utils/: config.c  config.h  log.c  log.h
src/veb/: veb.c  veb_internal.h
tests/: benchmark.c  test_manager.c  test_veb.c
